class SalaCinema:
    def __init__(self, id_sala, nome, posti_totali):
        self.id_sala = id_sala
        self.nome = nome
        self.posti_totali = posti_totali
